# TTT-Pose-Extraction

./: CMakeLists.txt  CMakePresets.json  README.md  TTT_AnimExtraction.cpp  TTT_AnimExtraction.hpp  Utils.cpp  constants.hpp
TTT_AnimExtraction/: CMakeLists.txt  TTT_AnimExtraction.cpp  Utils.hpp
